--- a/Resources/Private/Language/de.locallang_be.xlf
+++ b/Resources/Private/Language/de.locallang_be.xlf
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <xliff version="1.2" xmlns="urn:oasis:names:tc:xliff:document:1.2">
-	<file source-language="en" target-language="de" datatype="plaintext" original="EXT:fp_newsletter/Resources/Private/Language/locallang_be.xlf" date="2022-07-26T16:02:46Z" product-name="fp_newsletter">
+	<file source-language="en" target-language="de" datatype="plaintext" original="EXT:fp_newsletter/Resources/Private/Language/locallang_be.xlf" date="2023-02-15T13:10:18Z" product-name="fp_newsletter">
 		<header/>
 		<body>
 			<trans-unit id="title" resname="title">
@@ -26,6 +26,14 @@
 			<trans-unit id="template.form" resname="template.form">
 				<source>Newsletter: only a cacheable subscribe form</source>
 				<target>Newsletter: nur ein cachebares Anmelde-Formular</target>
+			</trans-unit>
+			<trans-unit id="template.editEmail" resname="template.editEmail">
+				<source>Newsletter: request edit email (part 1)</source>
+				<target>Newsletter: E-Mail zur Bearbeitung anfordern (Teil 1)</target>
+			</trans-unit>
+			<trans-unit id="template.edit" resname="template.edit">
+				<source>Newsletter: edit form (part 2)</source>
+				<target>Newsletter: Bearbeitung der Daten (Teil 2)</target>
 			</trans-unit>
 			<trans-unit id="template.subscribeExtern" resname="template.subscribeExtern">
 				<source>Newsletter: subscribe via external extension</source>
@@ -75,6 +83,10 @@
 				<source>Page to verify email-address for unsubscription</source>
 				<target>Seite für die Verifikation bei der Abmeldung</target>
 			</trans-unit>
+			<trans-unit id="editUid" resname="editUid">
+				<source>Page where a subscription ca be edited</source>
+				<target>Seite für die Bearbeitung der Anmeldedaten</target>
+			</trans-unit>
 			<trans-unit id="gdprUid" resname="gdprUid">
 				<source>Page with the GDPR</source>
 				<target>Seite mit den Datenschutzbestimmungen</target>
@@ -118,6 +130,18 @@
 			<trans-unit id="settings.enableUnsubscribeGdprAsHidden" resname="settings.enableUnsubscribeGdprAsHidden">
 				<source>Set the GDPR-checkbox to hidden on the unsubscription form?</source>
 				<target>Die DSGVO-Checkbox auf der Abmeldeseite verbergen?</target>
+			</trans-unit>
+			<trans-unit id="settings.enableEditForm" resname="settings.enableEditForm">
+				<source>Enable an edit form too?</source>
+				<target>Bearbeitenformular auch anzeigen?</target>
+			</trans-unit>
+			<trans-unit id="settings.enableEditForm.1" resname="settings.enableEditForm.1">
+				<source>Yes, under the subscription form</source>
+				<target>Ja, unter dem Anmeldeformular</target>
+			</trans-unit>
+			<trans-unit id="settings.enableEditForm.2" resname="settings.enableEditForm.2">
+				<source>Yes, but only a link to a new page</source>
+				<target>Ja, aber nur einen Link zu einer neuen Seite</target>
 			</trans-unit>
 			<trans-unit id="settings.mathCAPTCHA" resname="settings.mathCAPTCHA">
 				<source>Show a mathematical captcha?</source>
