--- a/Resources/Private/Language/de.locallang.xlf
+++ b/Resources/Private/Language/de.locallang.xlf
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <xliff version="1.2" xmlns="urn:oasis:names:tc:xliff:document:1.2">
-	<file source-language="en" target-language="de" datatype="plaintext" original="EXT:fp_newsletter/Resources/Private/Language/locallang.xlf" date="2022-03-31T15:06:06Z" product-name="fp_newsletter">
+	<file source-language="en" target-language="de" datatype="plaintext" original="EXT:fp_newsletter/Resources/Private/Language/locallang.xlf" date="2023-02-15T13:04:32Z" product-name="fp_newsletter">
 		<header/>
 		<body>
 			<trans-unit id="tx_fp_newsletter_domain_model_pi1" resname="tx_fp_newsletter_domain_model_pi1">
@@ -40,7 +40,7 @@
 				<target>Frau</target>
 			</trans-unit>
 			<trans-unit id="tx_fpnewsletter_domain_model_log.gender.divers" resname="tx_fpnewsletter_domain_model_log.gender.divers">
-				<source>Divers</source>
+				<source>Diverse</source>
 				<target>Divers</target>
 			</trans-unit>
 			<trans-unit id="tx_fpnewsletter_domain_model_log.title" resname="tx_fpnewsletter_domain_model_log.title">
@@ -143,6 +143,10 @@
 				<source>applies, which also includes other information about how to correct, delete and block my data.</source>
 				<target>, die auch weitere Informationen über Möglichkeiten zur Berichtigung, Löschung und Sperrung meiner Daten beinhaltet.</target>
 			</trans-unit>
+			<trans-unit id="subscribed_themes" resname="subscribed_themes">
+				<source>Subscription themes</source>
+				<target>Abonnierte Themen</target>
+			</trans-unit>
 			<trans-unit id="subscribe" resname="subscribe">
 				<source>Subscribe</source>
 				<target>Anmelden</target>
@@ -150,6 +154,14 @@
 			<trans-unit id="unsubscribe" resname="unsubscribe">
 				<source>Unsubscribe</source>
 				<target>Abmelden</target>
+			</trans-unit>
+			<trans-unit id="save" resname="save">
+				<source>Save</source>
+				<target>Änderungen speichern</target>
+			</trans-unit>
+			<trans-unit id="saved" resname="saved">
+				<source>Your changes have been saved.</source>
+				<target>Deine Änderungen wurden gespeichert.</target>
 			</trans-unit>
 			<trans-unit id="unsubscribe_head" resname="unsubscribe_head">
 				<source>Unsubscribe from the newsletter</source>
@@ -163,16 +175,32 @@
 				<source>Resend the verification email</source>
 				<target>Verifizierungsemail erneut senden</target>
 			</trans-unit>
+			<trans-unit id="editLink" resname="editLink">
+				<source>Edit my subscription data</source>
+				<target>Meine Anmeldedaten bearbeiten</target>
+			</trans-unit>
+			<trans-unit id="edit_head" resname="edit_head">
+				<source>Edit my settings</source>
+				<target>Abonnentendaten bearbeiten</target>
+			</trans-unit>
+			<trans-unit id="edit_entry" resname="edit_entry">
+				<source>Edit entry</source>
+				<target>Eintrag bearbeiten</target>
+			</trans-unit>
 			<trans-unit id="go_back" resname="go_back">
 				<source>go back</source>
 				<target>Zurück</target>
 			</trans-unit>
+			<trans-unit id="email_edit_sent" resname="email_edit_sent">
+				<source>An email has been sent to you. Please click in your email at the link to edit your data.</source>
+				<target>Eine E-Mail mit einem Link zur Bearbeitung Ihrer Daten wurde Ihnen zugesandt.</target>
+			</trans-unit>
 			<trans-unit id="email_send1" resname="email_send1">
-				<source>An email has been send to you. Please verify your email-address for the newsletter subscription.</source>
+				<source>An email has been sent to you. Please verify your email-address for the newsletter subscription.</source>
 				<target>Eine E-Mail mit einem Link zur Verifizierung Ihrer E-Mailadresse wurde Ihnen zugesandt. Erst nach Klick auf den Link in der E-Mail sind Sie zu unserem Newsletter angemeldet!</target>
 			</trans-unit>
 			<trans-unit id="email_send2" resname="email_send2">
-				<source>An email has been send to you. Please verify your email-address for the newsletter unsubscription.</source>
+				<source>An email has been sent to you. Please verify your email-address for the newsletter unsubscription.</source>
 				<target>Eine E-Mail mit einem Link zur Verifizierung Ihrer E-Mailadresse wurde Ihnen zugesandt. Erst nach Klick auf den Link in der E-Mail sind Sie von unserem Newsletter abgemeldet!</target>
 			</trans-unit>
 			<trans-unit id="email_verified" resname="email_verified">
@@ -271,6 +299,10 @@
 				<source>Error: this point should not be reached!</source>
 				<target>Fehler: unbekannt!</target>
 			</trans-unit>
+			<trans-unit id="missing_edit_uid" resname="missing_edit_uid">
+				<source>Error: the settings.editUid is not set!</source>
+				<target>Fehler: settings.editUid ist nicht gesetzt!</target>
+			</trans-unit>
 			<trans-unit id="missing_tt_address" resname="missing_tt_address">
 				<source>Error: the extension tt_address is required if you use settings.table=tt_address!</source>
 				<target>Fehler: die Extension tt_address wird benötigt, wenn settings.table=tt_address gesetzt ist!</target>
@@ -312,8 +344,12 @@
 				<target>Newsletter-Anmeldung</target>
 			</trans-unit>
 			<trans-unit id="email.pleaseVerify" resname="email.pleaseVerify">
-				<source>you need to click at the verify link to verify your email-address:</source>
+				<source>you need to click on the verify link to verify your email-address:</source>
 				<target>um sich zu unserem Newsletter anzumelden, müssen Sie Ihre E-Mail-Adresse mit Klick auf diesen Link verifizieren:</target>
+			</trans-unit>
+			<trans-unit id="email.pleaseEdit" resname="email.pleaseEdit">
+				<source>click at this link to modify your newsletter subscription:</source>
+				<target>klicken Sie bitte auf diesen Link, um Ihr Newsletter-Abonnement zu ändern:</target>
 			</trans-unit>
 			<trans-unit id="email.alternative" resname="email.alternative">
 				<source>Alternatively, you can also click on this button</source>
@@ -328,7 +364,7 @@
 				<target>Newsletter-Abmeldung</target>
 			</trans-unit>
 			<trans-unit id="email.pleaseVerifyUnsubscription" resname="email.pleaseVerifyUnsubscription">
-				<source>you need to click at the verify link to verify your unsubscription:</source>
+				<source>you need to click on the verify link to verify your unsubscription:</source>
 				<target>um sich von unserem Newsletter abzumelden, müssen Sie Ihre E-Mail-Adresse mit Klick auf diesen Link verifizieren:</target>
 			</trans-unit>
 			<trans-unit id="email.subscribedSuccess" resname="email.subscribedSuccess">
@@ -348,15 +384,15 @@
 				<target>Name:</target>
 			</trans-unit>
 			<trans-unit id="email.toAdminWantsTo" resname="email.toAdminWantsTo">
-				<source>This user wants to subscribe or to unsubscribe:</source>
+				<source>this user wants to subscribe or to unsubscribe:</source>
 				<target>dieser User möchte sich gerne an- oder abmelden:</target>
 			</trans-unit>
 			<trans-unit id="email.toAdminSubscribed" resname="email.toAdminSubscribed">
-				<source>This user has just subscribed to the newsletter:</source>
+				<source>this user has just subscribed to the newsletter:</source>
 				<target>dieser User hat sich gerade zum Newsletter angemeldet:</target>
 			</trans-unit>
 			<trans-unit id="email.toAdminUnsubscribed" resname="email.toAdminUnsubscribed">
-				<source>This user has just unsubscribed from the newsletter:</source>
+				<source>this user has just unsubscribed from the newsletter:</source>
 				<target>dieser User hat sich gerade vom Newsletter abgemeldet:</target>
 			</trans-unit>
 			<trans-unit id="email.subscribeVerifySubject" resname="email.subscribeVerifySubject">
@@ -382,6 +418,10 @@
 			<trans-unit id="email.unsubscribedSubject" resname="email.unsubscribedSubject">
 				<source>Newsletter-unsubscription confirmation</source>
 				<target>Bestätigung Newsletter-Abmeldung</target>
+			</trans-unit>
+			<trans-unit id="email.editSubject" resname="email.editSubject">
+				<source>Modify your newsletter-subscription</source>
+				<target>Ändern Sie Ihr Newsletter-Abonnement</target>
 			</trans-unit>
 		</body>
 	</file>
