--- a/Resources/Private/Language/it.locallang_be.xlf
+++ b/Resources/Private/Language/it.locallang_be.xlf
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <xliff version="1.2" xmlns="urn:oasis:names:tc:xliff:document:1.2">
-	<file source-language="en" target-language="it" datatype="plaintext" original="EXT:fp_newsletter/Resources/Private/Language/locallang_be.xlf" date="2022-07-26T16:03:30Z" product-name="fp_newsletter">
+	<file source-language="en" target-language="it" datatype="plaintext" original="EXT:fp_newsletter/Resources/Private/Language/locallang_be.xlf" date="2023-02-15T13:11:49Z" product-name="fp_newsletter">
 		<header/>
 		<body>
 			<trans-unit id="title" resname="title">
@@ -27,13 +27,21 @@
 				<source>Newsletter: only a cacheable subscribe form</source>
 				<target>Infolettre: solo un modulo di iscrizione memorizzabile nella cache</target>
 			</trans-unit>
+			<trans-unit id="template.editEmail" resname="template.editEmail">
+				<source>Newsletter: request edit email (part 1)</source>
+				<target>Newsletter: richiesta modifica email (parte 1)</target>
+			</trans-unit>
+			<trans-unit id="template.edit" resname="template.edit">
+				<source>Newsletter: edit form (part 2)</source>
+				<target>Newsletter: modifica modulo (parte 2)</target>
+			</trans-unit>
 			<trans-unit id="template.subscribeExtern" resname="template.subscribeExtern">
 				<source>Newsletter: subscribe via external extension</source>
 				<target>Newsletter: iscrizione via estensione esterna</target>
 			</trans-unit>
 			<trans-unit id="template.subscribeVerify" resname="template.subscribeVerify">
 				<source>Newsletter: verify subscription</source>
-				<target>Newsletter: verifica l'iscrizione</target>
+				<target>Newsletter: verifica l&#039;iscrizione</target>
 			</trans-unit>
 			<trans-unit id="template.unsubscribe" resname="template.unsubscribe">
 				<source>Newsletter: unsubscribe via form</source>
@@ -44,7 +52,7 @@
 				<target>Newsletter: revoca della iscrizione via direct_mail-link</target>
 			</trans-unit>
 			<trans-unit id="template.unsubscribeLux" resname="template.unsubscribeLux">
-				<source>Newsletter: unsubscribe via luxletter-link</source>
+				<source>Newsletter: unsubscribe via Luxletter-link</source>
 				<target>Newsletter: revoca della iscrizione via luxletter-link</target>
 			</trans-unit>
 			<trans-unit id="template.unsubscribeVerify" resname="template.unsubscribeVerify">
@@ -53,7 +61,7 @@
 			</trans-unit>
 			<trans-unit id="template.resend" resname="template.resend">
 				<source>Newsletter: resend verification email</source>
-				<target>Newsletter: invia nuovamente l'e-mail di verifica</target>
+				<target>Newsletter: invia nuovamente l&#039;e-mail di verifica</target>
 			</trans-unit>
 			<trans-unit id="template.list" resname="template.list">
 				<source>List view: all actions</source>
@@ -65,7 +73,7 @@
 			</trans-unit>
 			<trans-unit id="subscribeVerifyUid" resname="subscribeVerifyUid">
 				<source>Page to verify email-address for subscription</source>
-				<target>Pagina per verificare l'email usato in fase di iscrizione</target>
+				<target>Pagina per verificare l&#039;email usato in fase di iscrizione</target>
 			</trans-unit>
 			<trans-unit id="unsubscribeUid" resname="unsubscribeUid">
 				<source>Page for the unsubscription</source>
@@ -73,7 +81,11 @@
 			</trans-unit>
 			<trans-unit id="unsubscribeVerifyUid" resname="unsubscribeVerifyUid">
 				<source>Page to verify email-address for unsubscription</source>
-				<target>Pagina per verificare l'indirizzo email in fase di revoca</target>
+				<target>Pagina per verificare l&#039;indirizzo email in fase di revoca</target>
+			</trans-unit>
+			<trans-unit id="editUid" resname="editUid">
+				<source>Page where a subscription ca be edited</source>
+				<target>Pagina in cui è possibile modificare un abbonamento</target>
 			</trans-unit>
 			<trans-unit id="gdprUid" resname="gdprUid">
 				<source>Page with the GDPR</source>
@@ -119,6 +131,18 @@
 				<source>Set the GDPR-checkbox to hidden on the unsubscription form?</source>
 				<target>Configura il checkbox GDPR per nascondere il form di revoca stampato sotto il modulo?</target>
 			</trans-unit>
+			<trans-unit id="settings.enableEditForm" resname="settings.enableEditForm">
+				<source>Enable an edit form too?</source>
+				<target>Abilitare anche un modulo di modifica?</target>
+			</trans-unit>
+			<trans-unit id="settings.enableEditForm.1" resname="settings.enableEditForm.1">
+				<source>Yes, under the subscription form</source>
+				<target>Sì, sotto il modulo di iscrizione</target>
+			</trans-unit>
+			<trans-unit id="settings.enableEditForm.2" resname="settings.enableEditForm.2">
+				<source>Yes, but only a link to a new page</source>
+				<target>Sì, ma solo un collegamento a una nuova pagina</target>
+			</trans-unit>
 			<trans-unit id="settings.mathCAPTCHA" resname="settings.mathCAPTCHA">
 				<source>Show a mathematical captcha?</source>
 				<target>Mostra un captcha matematico?</target>
@@ -157,15 +181,15 @@
 			</trans-unit>
 			<trans-unit id="settings.enableConfirmationMails" resname="settings.enableConfirmationMails">
 				<source>Enable confirmation emails to the user?</source>
-				<target>Abilitare le email di conferma all'utente?</target>
+				<target>Abilitare le email di conferma all&#039;utente?</target>
 			</trans-unit>
 			<trans-unit id="settings.dontAppendL" resname="settings.dontAppendL">
 				<source>Add language UID to email templates?</source>
-				<target>Aggiungere l'UID della lingua ai modelli di posta elettronica?</target>
+				<target>Aggiungere l&#039;UID della lingua ai modelli di posta elettronica?</target>
 			</trans-unit>
 			<trans-unit id="settings.dmUnsubscribeMode" resname="settings.dmUnsubscribeMode">
 				<source>Direct mail unsubscribe mode: direct unsubscribe (no) or go to the unsubscribe page (yes)?</source>
-				<target>Direct mail modalità di annullamento dell'iscrizione: disiscrizione diretta (no) o vai alla pagina di annullamento dell'iscrizione (si)?</target>
+				<target>Direct mail modalità di annullamento dell&#039;iscrizione: disiscrizione diretta (no) o vai alla pagina di annullamento dell&#039;iscrizione (si)?</target>
 			</trans-unit>
 			<trans-unit id="settings.module_sys_dmail_html" resname="settings.module_sys_dmail_html">
 				<source>Subscribe to a HTML-newsletter?</source>
@@ -181,11 +205,11 @@
 			</trans-unit>
 			<trans-unit id="settings.parameters.active" resname="settings.parameters.active">
 				<source>Checkbox name for the newsletter-subscription (e.g. tx_myshop_pi1|newBestellung|newsletter)</source>
-				<target>Nome della casella di controllo per l'iscrizione alla newsletter (p.e. tx_myshop_pi1|newBestellung|newsletter)</target>
+				<target>Nome della casella di controllo per l&#039;iscrizione alla newsletter (p.e. tx_myshop_pi1|newBestellung|newsletter)</target>
 			</trans-unit>
 			<trans-unit id="settings.parameters.email" resname="settings.parameters.email">
 				<source>Input-field name for the email-address (e.g. tx_myshop_pi1|newBestellung|email)</source>
-				<target>Nome del campo di input per l'indirizzo e-mail (p.e. tx_myshop_pi1|newBestellung|email)</target>
+				<target>Nome del campo di input per l&#039;indirizzo e-mail (p.e. tx_myshop_pi1|newBestellung|email)</target>
 			</trans-unit>
 			<trans-unit id="dashboard.widget.fixpunktRecentLogEntries.title" resname="dashboard.widget.fixpunktRecentLogEntries.title">
 				<source>fp_newsletter: recent 7 log entries</source>
@@ -193,7 +217,7 @@
 			</trans-unit>
 			<trans-unit id="dashboard.widget.fixpunktRecentLogEntries.description" resname="dashboard.widget.fixpunktRecentLogEntries.description">
 				<source>Shows date, name, email and status of the last entries</source>
-				<target>Mostra la data, il nome, l'e-mail e lo stato delle ultime voci</target>
+				<target>Mostra la data, il nome, l&#039;e-mail e lo stato delle ultime voci</target>
 			</trans-unit>
 			<trans-unit id="dashboard.widget.fixpunktLogStatus.title" resname="dashboard.widget.fixpunktLogStatus.title">
 				<source>fp_newsletter: status diagram</source>
